Fix: Make sure 'lan' network are advertised over WAN

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router2.cfg
@@ -92,6 +92,8 @@ interface Vxlan1
    description uplink_lan_wan_router2_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
+   vxlan vrf default vni 1
+   vxlan vrf VRF1 vni 123
 !
 application traffic recognition
    !
@@ -107,6 +109,8 @@ ip routing
 no ip routing vrf MGMT
 ip routing vrf VRF1
 ipv6 unicast-routing vrf VRF1
+!
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.1.2:0
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.1.0/24 eq 32
@@ -127,8 +131,60 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.1.2:0 additive
 !
+route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN deny 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN permit 20
+!
+route-map RM-EVPN-SOO-OUT permit 10
+   set extcommunity soo 192.168.1.2:0 additive
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
+!
+router bgp 65100
+   router-id 192.168.1.2
+   maximum-paths 16
+   update wait-install
+   no bgp default ipv4-unicast
+   neighbor WAN-OVERLAY-PEERS peer group
+   neighbor WAN-OVERLAY-PEERS remote-as 65100
+   neighbor WAN-OVERLAY-PEERS update-source Dps1
+   neighbor WAN-OVERLAY-PEERS bfd
+   neighbor WAN-OVERLAY-PEERS bfd interval 1000 min-rx 1000 multiplier 10
+   neighbor WAN-OVERLAY-PEERS ttl maximum-hops 1
+   neighbor WAN-OVERLAY-PEERS send-community
+   neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   redistribute connected route-map RM-CONN-2-BGP
+   !
+   address-family evpn
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
+      neighbor WAN-OVERLAY-PEERS activate
+   !
+   address-family ipv4
+      no neighbor WAN-OVERLAY-PEERS activate
+   !
+   address-family path-selection
+      bgp additional-paths receive
+      bgp additional-paths send any
+      neighbor WAN-OVERLAY-PEERS activate
+   !
+   vrf default
+      rd 192.168.1.2:1
+      route-target import evpn 1:1
+      route-target export evpn 1:1
+      route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
+   !
+   vrf VRF1
+      rd 192.168.1.2:123
+      route-target import evpn 123:123
+      route-target export evpn 123:123
+      router-id 192.168.1.2
+      redistribute connected
 !
 management api http-commands
    protocol https
