Feat(eos_designs): Add support for hop count lowest in load-balancing policies (#3646)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -125,6 +125,7 @@ router path-selection
       loss-rate 42.0
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
+      hop count lowest
       jitter 42
 !
 spanning-tree mode none
