--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -161,6 +161,7 @@ router path-selection
       path-group INET priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
+      hop count lowest
       jitter 42
       path-group MPLS
       path-group INET priority 2
