--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
@@ -129,6 +129,8 @@ wan_virtual_topologies:
             preference: preferred
       application_virtual_topologies:
         - application_profile: VOICE
+          # Following should NOT be rendered for AUTOVPN
+          lowest_hop_count: true
           path_groups:
             - names: [INET]
               preference: preferred
