Adding test for node level config

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-spine1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-spine1.cfg
@@ -12,7 +12,7 @@ ptp clock-identity 00:00:00:00:00:00
 ptp priority1 20
 ptp priority2 1
 ptp domain 127
-ptp mode boundary
+ptp mode boundary one-step
 ptp monitor threshold offset-from-master 250
 ptp monitor threshold mean-path-delay 1500
 ptp monitor sequence-id
