--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-spine2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-spine2.cfg
@@ -16,7 +16,7 @@ ptp ttl 128
 ptp domain 127
 ptp message-type general dscp 46 default
 ptp message-type event dscp 48 default
-ptp mode boundary
+ptp mode boundary one-step
 ptp forward-unicast
 ptp monitor threshold offset-from-master 1234
 ptp monitor threshold mean-path-delay 4567
