--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-spine3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-spine3.cfg
@@ -11,7 +11,7 @@ hostname ptp-tests-spine3
 ptp priority1 20
 ptp priority2 3
 ptp domain 127
-ptp mode boundary
+ptp mode boundary one-step
 ptp monitor threshold offset-from-master 250
 ptp monitor threshold mean-path-delay 1500
 ptp monitor sequence-id
