--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS_LEAFS.yml
@@ -29,6 +29,8 @@ l3leaf:
             - Ethernet1
             - Ethernet2
           ptp:
+            mode: boundary
+            mode_one_step: true
             clock_identity: "11:11:11:11:11:11"
 
         - name: ptp-tests-leaf2
