--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf1.cfg
@@ -12,7 +12,7 @@ ptp clock-identity 11:11:11:11:11:11
 ptp priority1 30
 ptp priority2 1
 ptp domain 127
-ptp mode boundary
+ptp mode boundary one-step
 ptp monitor threshold offset-from-master 250
 ptp monitor threshold mean-path-delay 1500
 ptp monitor sequence-id
