Feat(eos_designs): Add wan_carrier and circuit_id to l3 interface description

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -79,6 +79,7 @@ interface Dps1
    ip address 192.168.255.1/32
 !
 interface Ethernet1
+   description Comcast_666
    no shutdown
    no switchport
    ip address dhcp
