--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
@@ -93,6 +93,7 @@ interface Dps1
    ip address 192.168.130.1/32
 !
 interface Ethernet1
+   description Comcast_666
    no shutdown
    no switchport
    ip address dhcp
