--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr1.cfg
@@ -87,6 +87,7 @@ interface Dps1
    ip address 192.168.131.1/32
 !
 interface Ethernet1
+   description ATT_777
    no shutdown
    no switchport
    ip address dhcp
