--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -179,6 +179,7 @@ interface Dps1
    ip address 192.168.142.2/32
 !
 interface Ethernet1
+   description Inmrasat_S511
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
