--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -144,6 +144,7 @@ interface Dps1
    ip address 192.168.255.1/32
 !
 interface Ethernet1
+   description ATT_666
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
@@ -151,12 +152,14 @@ interface Ethernet1
    dhcp client accept default-route
 !
 interface Ethernet2
+   description Colt_10555
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.15.5.5/31
 !
 interface Ethernet3
+   description Comcast-5G_AF830
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
