--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
@@ -222,6 +222,7 @@ interface Dps1
    ip address 192.168.144.2/32
 !
 interface Ethernet1
+   description Orange_888
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
