--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-custom-default-policy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-custom-default-policy.yml
@@ -110,6 +110,7 @@ ethernet_interfaces:
   ip_address: dhcp
   shutdown: false
   type: routed
+  description: ATT_666
   dhcp_client_accept_default_route: true
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
@@ -118,6 +119,7 @@ ethernet_interfaces:
   ip_address: 172.15.5.5/31
   shutdown: false
   type: routed
+  description: Colt_10555
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 - name: Ethernet3
@@ -125,6 +127,7 @@ ethernet_interfaces:
   ip_address: 172.20.20.20/31
   shutdown: false
   type: routed
+  description: Comcast-5G_AF830
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 loopback_interfaces:
