--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -243,6 +243,7 @@ ethernet_interfaces:
   ip_address: dhcp
   shutdown: false
   type: l3dot1q
+  description: Comcast
   encapsulation_dot1q_vlan: 42
   dhcp_client_accept_default_route: true
   flow_tracker:
@@ -252,6 +253,7 @@ ethernet_interfaces:
   ip_address: 172.16.6.6/31
   shutdown: false
   type: l3dot1q
+  description: Colt_10666
   encapsulation_dot1q_vlan: 666
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
