--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -87,6 +87,7 @@ interface Dps1
    ip address 192.168.131.2/32
 !
 interface Ethernet1
+   description ATT_888
    no shutdown
    no switchport
    ip address 10.8.8.8/31
