--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -214,6 +214,7 @@ interface Dps1
    ip address 192.168.142.2/32
 !
 interface Ethernet1
+   description ATT_423-01
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
