--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -212,6 +212,7 @@ interface Dps1
    ip address 192.168.142.3/32
 !
 interface Ethernet2
+   description Colt_10423
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
