--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -230,12 +230,14 @@ interface Dps1
    ip address 192.168.144.3/32
 !
 interface Ethernet1
+   description SFR_999
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 10.9.9.9/31
 !
 interface Ethernet2
+   description ATT-MPLS_10999
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
