--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -265,6 +265,7 @@ interface Ethernet1
    no switchport
 !
 interface Ethernet1.42
+   description Comcast
    no shutdown
    encapsulation dot1q vlan 42
    flow tracker hardware WAN-FLOW-TRACKER
@@ -276,6 +277,7 @@ interface Ethernet2
    no switchport
 !
 interface Ethernet2.42
+   description Colt_10666
    no shutdown
    encapsulation dot1q vlan 666
    flow tracker hardware WAN-FLOW-TRACKER
