--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -74,6 +74,8 @@ wan_router:
           uplink_switch_interfaces: [Ethernet1]
           l3_interfaces:
             - name: Ethernet1
+              peer: peer3
+              peer_interface: Ethernet42
               wan_carrier: ATT
               wan_circuit_id: 666
               dhcp_accept_default_route: true
