Expand eos_cli support for BGP configuration #3570

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10236,6 +10236,10 @@ keys:
                 type: bool
           next_hop_unchanged:
             type: bool
+          eos_cli:
+            type: str
+            description: "Multiline EOS CLI rendered directly on the Router BGP, Address
+              family EVPN in the final EOS configuration           \n"
       address_family_rtc:
         type: dict
         keys:
