Added punctuations to descriptions

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
@@ -38,9 +38,9 @@ monitor telemetry postcard policy
       match rule rule1 ipv4
          destination prefix 10.3.3.0/24
          source prefix 3.4.5.0/24
-         protocol udp destination port www
-         protocol udp destination port 78-80
-         protocol udp destination port 77
+         protocol udp source port www
+         protocol udp source port 78-80
+         protocol udp source port 77
    sample policy samplepo3
       match ipv4-all-default ipv4
       !
