Addressing review comments

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7324,7 +7324,7 @@ keys:
                             - str
                             description: 'Specify lower rate.
 
-                              Lower rate range in kbps - <8-200000000>.'
+                              Range in kbps <8-200000000>.'
                           rate_unit:
                             type: str
                             valid_values:
@@ -7337,8 +7337,7 @@ keys:
                             type: int
                             convert_types:
                             - str
-                            min: 256
-                            max: 128000000
+                            description: Range in bytes <256-128000000>.
                           burst_size_unit:
                             type: str
                             valid_values:
@@ -7361,13 +7360,15 @@ keys:
                             type: int
                             convert_types:
                             - str
-                            description: Specify higher rate.
+                            description: 'Specify higher rate.
+
+                              Range in kbps <lower_rate in kbps + 8 - lower_rate in
+                              kbps + 200000000>.'
                           higher_rate_burst_size:
                             type: int
                             convert_types:
                             - str
-                            min: 256
-                            max: 128000000
+                            description: Range in bytes <256-128000000>.
   port_channel_interfaces:
     type: list
     primary_key: name
