Added punctuation to the description

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10239,7 +10239,7 @@ keys:
           eos_cli:
             type: str
             description: 'Multiline EOS CLI rendered directly on the Router BGP, Address
-              family EVPN in the final EOS configuration
+              family EVPN in the final EOS configuration.
 
               '
       address_family_rtc:
