--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1032,7 +1032,7 @@ keys:
             type: bool
           eos_cli:
             type: str
-            description: |
+            description: |-
               Multiline EOS CLI rendered directly on the Router BGP, Address family EVPN in the final EOS configuration.
       address_family_rtc:
         type: dict
