Fix templates Add test cases

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -118,6 +118,7 @@ router-adaptive-virtual-topology
 router-bfd-1
 router-bfd-2
 router-bgp-base
+router-bgp-asdot
 router-bgp-evpn
 router-bgp-evpn-vpn-import-pruning
 router-bgp-evpn-mpls
