--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf1a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf1a-catalog.yml
@@ -1,3 +1,56 @@
+anta.tests.aaa:
+- VerifyTacacsSourceIntf:
+    intf: Management0
+    vrf: default
+- VerifyTacacsServers:
+    servers:
+    - 1.1.1.1
+    - 2.2.2.2
+    vrf: default
+- VerifyTacacsServerGroups:
+    groups:
+    - admin
+    - user
+- VerifyAuthenMethods:
+    methods:
+    - local
+    - none
+    - logging
+    types:
+    - login
+    - enable
+    - dot1x
+- VerifyAuthzMethods:
+    methods:
+    - local
+    - none
+    - logging
+    types:
+    - commands
+    - exec
+- VerifyAcctDefaultMethods:
+    methods:
+    - local
+    - none
+    - logging
+    types:
+    - system
+    - exec
+    - commands
+    - dot1x
+- VerifyAcctConsoleMethods:
+    methods:
+    - local
+    - none
+    - logging
+    types:
+    - system
+    - exec
+    - commands
+    - dot1x
+anta.tests.configuration:
+- VerifyZeroTouch: null
+- VerifyRunningConfigDiffs: null
 anta.tests.connectivity:
 - VerifyLLDPNeighbors:
     neighbors:
@@ -214,6 +267,9 @@ anta.tests.connectivity:
       - Loopback0 Reachability
       custom_field: 'Source: dc2-leaf1a - 10.255.128.13/32 Destination: 10.255.128.18'
       description: Loopback0 Reachability
+anta.tests.field_notices:
+- VerifyFieldNotice44Resolution: null
+- VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
     states:
@@ -221,12 +277,27 @@ anta.tests.hardware:
 - VerifyEnvironmentCooling:
     states:
     - ok
-- VerifyTemperature: {}
+- VerifyTemperature: null
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+- VerifyTransceiversManufacturers:
+    manufacturers:
+    - Not Present
+    - Arista Networks
+    - Arastra, Inc.
+- VerifyTemperature: null
+- VerifyTransceiversTemperature: null
+- VerifyEnvironmentSystemCooling: null
+- VerifyEnvironmentCooling:
+    states:
+    - ok
+- VerifyEnvironmentPower:
+    states:
+    - ok
+- VerifyAdverseDrops: null
 anta.tests.interfaces:
 - VerifyInterfacesStatus:
     interfaces:
@@ -448,8 +519,41 @@ anta.tests.interfaces:
       - Interface State
       custom_field: Vxlan1
       description: Vxlan Interface Status & Line Protocol == 'up'
+anta.tests.logging:
+- VerifyLoggingPersistent: null
+- VerifyLoggingSourceIntf:
+    interface: Management0
+    vrf: default
+- VerifyLoggingHosts:
+    hosts:
+    - 1.1.1.1
+    - 2.2.2.2
+    vrf: default
+- VerifyLoggingLogsGeneration: null
+- VerifyLoggingHostname: null
+- VerifyLoggingTimestamp: null
+- VerifyLoggingAccounting: null
+- VerifyLoggingErrors: null
 anta.tests.mlag:
-- VerifyMlagStatus: {}
+- VerifyMlagStatus: null
+- VerifyMlagStatus: null
+- VerifyMlagInterfaces: null
+- VerifyMlagConfigSanity: null
+- VerifyMlagReloadDelay:
+    reload_delay: 300
+    reload_delay_non_mlag: 330
+- VerifyMlagDualPrimary:
+    detection_delay: 200
+    errdisabled: true
+    recovery_delay: 60
+    recovery_delay_non_mlag: 0
+anta.tests.multicast:
+- VerifyIGMPSnoopingVlans:
+    vlans:
+      10: false
+      12: false
+- VerifyIGMPSnoopingGlobal:
+    enabled: true
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
@@ -654,6 +758,41 @@ anta.tests.routing.generic:
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+anta.tests.snmp:
+- VerifySnmpStatus:
+    vrf: default
+- VerifySnmpIPv4Acl:
+    number: 3
+    vrf: default
+- VerifySnmpIPv6Acl:
+    number: 3
+    vrf: default
+anta.tests.software:
+- VerifyEOSVersion:
+    versions:
+    - 4.25.4M
+    - 4.26.1F
+- VerifyTerminAttrVersion:
+    versions:
+    - v1.13.6
+    - v1.8.0
+anta.tests.stp:
+- VerifySTPMode:
+    mode: rapidPvst
+    vlans:
+    - 10
+    - 20
+- VerifySTPBlockedPorts: null
+- VerifySTPCounters: null
+- VerifySTPForwardingPorts:
+    vlans:
+    - 10
+    - 20
+- VerifySTPRootPriority:
+    instances:
+    - 10
+    - 20
+    priority: 32768
 anta.tests.system:
 - VerifyNTP:
     result_overwrite:
@@ -661,3 +800,12 @@ anta.tests.system:
       - NTP
       custom_field: NTP
       description: Synchronised with NTP server
+- VerifyUptime:
+    minimum: 86400
+- VerifyReloadCause: null
+- VerifyCoredump: null
+- VerifyAgentLogs: null
+- VerifyCPUUtilization: null
+- VerifyMemoryUtilization: null
+- VerifyFileSystemUtilization: null
+- VerifyNTP: null
