--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
@@ -108,7 +108,7 @@ keys:
                             description: |-
                               Specify lower rate.
                               Range in kbps <8-200000000>.
-                          rate_unit:
+                          lower_rate_unit:
                             type: str
                             valid_values:
                               - "bps"
@@ -121,7 +121,7 @@ keys:
                             convert_types:
                               - str
                             description: Range in bytes <256-128000000>.
-                          burst_size_unit:
+                          lower_rate_burst_size_unit:
                             type: str
                             valid_values:
                               - "bytes"
@@ -146,8 +146,24 @@ keys:
                             description: |-
                               Specify higher rate.
                               Range in kbps <lower_rate in kbps + 8 - lower_rate in kbps + 200000000>.
+                          higher_rate_unit:
+                            type: str
+                            valid_values:
+                              - "bps"
+                              - "kbps"
+                              - "mbps"
+                              - "pps"
+                            default: "bps"
                           higher_rate_burst_size:
                             type: int
                             convert_types:
                               - str
                             description: Range in bytes <256-128000000>.
+                          higher_rate_burst_size_unit:
+                            type: str
+                            valid_values:
+                              - "bytes"
+                              - "kbytes"
+                              - "mbytes"
+                              - "packets"
+                            default: "bytes"
