--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
@@ -33,12 +33,12 @@ policy-map type quality-of-service PM_REPLICATION_LD2
    class CM_REPLICATION_LD
       set dscp af11
       set cos 4
-      police rate 30 kbps burst-size 280 bytes rate 40 kbps burst-size 270 bytes
+      police rate 30 kbps burst-size 280 bytes rate 1 mbps burst-size 270 bytes
 !
 policy-map type quality-of-service PM_REPLICATION_LD3
    class CM_REPLICATION_LD
       set dscp af11
       set cos 6
-      police rate 10 kbps burst-size 260 kbytes
+      police rate 10000 bps burst-size 260 kbytes
 !
 end
