--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3230,6 +3230,9 @@ keys:
       hardware:
         type: dict
         $ref: eos_cli_config_gen#/$defs/flow_tracking
+        keys:
+          record_format_ipfix_standard_timestamps_counters:
+            type: bool
   flow_trackings:
     documentation_options:
       table: flow-tracking
