Feat(eos_designs): Add bfd for isis in the MPLS design

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
@@ -82,6 +82,7 @@ router isis EVPN_UNDERLAY
    !
    address-family ipv4 unicast
       maximum-paths 4
+      bfd all-interfaces
    !
 !
 management api http-commands
