--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3829,6 +3829,11 @@ keys:
       '
     type: bool
     default: false
+  underlay_isis_bfd_enable:
+    documentation_options:
+      table: isis-settings
+    type: bool
+    default: false
   underlay_isis_instance_name:
     documentation_options:
       table: isis-settings
