addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf2.yml
@@ -263,10 +263,10 @@ port_channel_interfaces:
     transport: ipv4
     enable: true
     role: master
+    mpass: true
   mode: access
   vlans: '11'
   mlag: 1
-  ptp_mpass: true
 ethernet_interfaces:
 - name: Ethernet9
   peer: ptp-tests-leaf1
