--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7669,8 +7669,6 @@ keys:
           - network
         vmtracer:
           type: bool
-        ptp_mpass:
-          type: bool
         ptp:
           type: dict
           keys:
@@ -7719,6 +7717,8 @@ keys:
               - ipv4
               - ipv6
               - layer2
+            mpass:
+              type: bool
         ip_address:
           type: str
           description: IPv4 address/mask
