--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -4330,6 +4330,14 @@ $defs:
           ptp_mpass:
             type: bool
             default: false
+            description: 'When MPASS is enabled on an MLAG port-channel, MLAG peers
+              coordinate to function as a single PTP logical device.
+
+              Arista PTP enabled devices always place PTP messages on the same physical
+              link within the port-channel.
+
+              Hence, MPASS is needed only on MLAG port-channels connected to non-Arista
+              devices.'
           esi:
             type: str
             description: Format xxxx:xxxx:xxxx.
