--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
@@ -543,8 +543,6 @@ keys:
             - network
         vmtracer:
           type: bool
-        ptp_mpass:
-          type: bool
         ptp:
           type: dict
           keys:
@@ -593,6 +591,8 @@ keys:
                 - ipv4
                 - ipv6
                 - layer2
+            mpass:
+              type: bool
         ip_address:
           type: str
           description: IPv4 address/mask
