--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -173,10 +173,10 @@ keys:
           mlag: 300
           non_mlag: 330
         feature_support:
-          queue_monitor_length_notify: False
-          interface_storm_control: True
-          bgp_update_wait_for_convergence: True
-          bgp_update_wait_install: False
+          queue_monitor_length_notify: false
+          interface_storm_control: true
+          bgp_update_wait_for_convergence: true
+          bgp_update_wait_install: false
       - platforms:
           - 7368X4
         management_interface: Management0
